@@ -1,5 +1,9 @@
 2004-07-20  Daniel Steffen  <das@users.sourceforge.net>
 
+	* unix/tcl.m4: fixed Darwin autoconf breakage caused by
+	recent CFLAGS reordering.
+	* unix/configure: regen
+
 	* macosx/Makefile: added support to tk framework build to
 	optionally install tk manpages in addition to html help,
 	similarly to tcl/macosx/Makefile.
